objects/PC_SupportPlanInfo__e.object
<CustomObject>
    <description>Object to hold the information about Support plan and Trigger object record details</description>
    <fields>
        <fullName>PC_Context__c</fullName>
        <description>Context in which Support Plan Info Platform event is published</description>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_RecordId__c</fullName>
        <description>Id of the Trigger Object Record which triggers the Support Plan</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_RuntimeUserId__c</fullName>
        <description>Id of User who triggered the Support Plan initiation</description>
        <label>Runtime User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlanOrRuntimeIds__c</fullName>
        <description>Record Ids of Support Plans/ Support Plan Runtimes to be processed</description>
        <label>Support Plan/Runtime Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_TransactionId__c</fullName>
        <description>Unique Id given for each transaction when a support plan is executed</description>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TriggerRecordModifiedTime__c</fullName>
        <description>Used to store Last modified Date Time of record which trigger Support Plan</description>
        <label>Trigger Record Modified Time</label>
        <type>DateTime</type>
    </fields>
    <label>Support Plan Info</label>
    <pluralLabel>Support Plan Info</pluralLabel>
</CustomObject>